# claude-resources

./: .gitignore  CLAUDE.md  README.md
agents/: code-reviewer.md  frontend-developer.md  frontend-worktree-child.md  markdown-generator.md  markdown-writer.md  repo-syncer.md  researcher.md  safe-developer.md  tdd-developer.md  text-fixer.md  zpaper-writer.md  zudocg-writer.md  zudoesa-writer.md
app/: CLAUDE.md  Cargo.toml  tauri.conf.json  test-launch.sh
app/capabilities/: default.json
app/frontend/: index.html
app/scripts/: download-node.sh
app/src/: main.rs
commands/: bambulab-height-calculation.md  commits.md  cpwd.md  dump-fullpath.md  git-prune-branches-both.md  git-prune-branches-local.md  git-prune-branches-remote.md  lazy-dev.md  local-review.md  next-todo.md  pr-complete.md  pr-create.md  pr-make-suggestion-edit.md  pr-make-suggestion-to-pr.md  pr-recreate.md  pr-separate.md  pr-split.md  pr.md  purge-private-info.md  push-auto.md  push-forbid.md  refer-another-project.md  start-wt-dev.md  vpr.md
doc/: .gitignore  CLAUDE.md  astro.config.ts  package.json  pnpm-workspace.yaml
hooks/: allow-worktree-teammate-edits.sh  block-sendmessage-backticks.sh  notify-ifttt.sh
scripts/: MIGRATION-GUIDE.md  codex-rate-limit.js  codex-sweep.js  create-worktree.sh  deny-check.sh  gco-rate-limit.js  get-logdir.js  normalize-settings-model.js  save-file.js  setup-web-wisdom.sh  setup-web.sh
skills/: cloudflare-wisdom  codemirror-wisdom  css-wisdom  headless-browser  tauri-wisdom  test-wisdom  verify-ui  zfb-wisdom  zudo-doc-wisdom  zudo-pattern-gen-thumb
(+571 files in other folders)
