# Build the .app bundle: cargo tauri build
# (requires `cargo install tauri-cli` or `cargo binstall tauri-cli`)

[package]
name = "claude-resources"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
serde_json = "1.0.149"
